# backend/internal/settings/types.go
@@ -11,6 +11,7 @@ const ProviderKey = "media-hub-runtime-settings"
 type Values struct {
 	QMediaSync config.QMediaSync     `json:"qmediaSync"`
 	Emby       config.Emby           `json:"emby"`
+	SharedEmby config.SharedEmby     `json:"sharedEmby"`
 	Drive115   config.Drive115       `json:"drive115"`
 	TMDB       config.TMDB           `json:"tmdb"`
 	Assrt      config.Assrt          `json:"assrt"`
@@ -82,6 +83,13 @@ type EmbyUpdate struct {
 	Password SecretUpdate `json:"password"`
 }
 
+type SharedEmbyUpdate struct {
+	BaseURL  string       `json:"baseUrl"`
+	Username string       `json:"username"`
+	Password SecretUpdate `json:"password"`
+	ProxyURL string       `json:"proxyUrl"`
+}
+
 type Drive115Update struct {
 	ClientID string `json:"clientId"`
 }
@@ -122,6 +130,7 @@ type WeComUpdate struct {
 type Update struct {
 	QMediaSync QMediaSyncUpdate  `json:"qmediaSync"`
 	Emby       EmbyUpdate        `json:"emby"`
+	SharedEmby *SharedEmbyUpdate `json:"sharedEmby"`
 	Drive115   Drive115Update    `json:"drive115"`
 	TMDB       TMDBUpdate        `json:"tmdb"`
 	Assrt      *AssrtUpdate      `json:"assrt"`
@@ -146,6 +155,13 @@ type EmbyView struct {
 	APIKey   SecretStatus `json:"apiKey"`
 	UserID   string       `json:"userId"`
 	Password SecretStatus `json:"password"`
+}
+
+type SharedEmbyView struct {
+	BaseURL  string       `json:"baseUrl"`
+	Username string       `json:"username"`
+	Password SecretStatus `json:"password"`
+	ProxyURL string       `json:"proxyUrl"`
 }
 
 type Drive115View struct {
@@ -189,6 +205,7 @@ type WeComView struct {
 type View struct {
 	QMediaSync QMediaSyncView  `json:"qmediaSync"`
 	Emby       EmbyView        `json:"emby"`
+	SharedEmby SharedEmbyView  `json:"sharedEmby"`
 	Drive115   Drive115View    `json:"drive115"`
 	TMDB       TMDBView        `json:"tmdb"`
 	Assrt      AssrtView       `json:"assrt"`
@@ -242,6 +259,7 @@ func FromConfig(value config.Config) Values {
 	return Values{
 		QMediaSync: value.QMediaSync,
 		Emby:       value.Emby,
+		SharedEmby: value.SharedEmby,
 		Drive115:   value.Drive115,
 		TMDB:       value.TMDB,
 		Assrt:      value.Assrt,
